apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'jacoco'

group = 'org.karlin.pathfinder'
version = '0.1.0'

description = "Illustrator for single-source shortest path problem using openstreetmap data in visualisation"

sourceCompatibility = 1.8
targetCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    maxHeapSize = "1024m"
    jvmArgs "-XX:MaxPermSize=256m"
}

repositories {
    mavenCentral()
}

dependencies {
    compile group: 'com.google.code.gson', name: 'gson', version:'2.8.0'
    compile group: 'org.springframework.boot', name: 'spring-boot-starter-web', version:'1.5.2.RELEASE'
    testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version:'1.5.2.RELEASE') {
        exclude(module: 'commons-logging')
    }
    testCompile group: 'com.jayway.jsonpath', name: 'json-path', version:'2.2.0'
    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
}

jacocoTestReport {
    reports {
        xml.enabled = true
        html.enabled = true
    }
}

check.dependsOn jacocoTestReport